-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.1
-
None
-
MacOSX
-
e90ce866fa61ece9eca3b8e0846d46bb73752824
Select Russian (or any other non-English input source) and press CMD+X in QLineEdit or QTextEdit. Qt will just insert "X" letter instead of cutting the selected text.
You can reproduce this bug in QtCreator's input fields (but not in it's code editor).
P.S. This is a regression from Qt 4.8